<resources>
    <string name="app_name">Shipping Calculator</string>
    <string name="weight_label">Weight of the package</string>
    <string name="ounces_label">(in ounces)</string>
    <string name="base_cost_label">Base Cost:</string>
    <string name="added_cost_label">Added Cost:</string>
    <string name="total_shipping_label">Total Shipping Cost:</string>
    <string name="zero_money">$0.00</string>
    <string name="zero">0</string>
</resources>
