<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.mpaulding.shippingcalculator.MainActivity"
    android:background="@drawable/shippingbck">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/zero"
        android:textSize="35sp"
        android:selectAllOnFocus="true">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ounces_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/weightEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/base_cost_label"
        android:id="@+id/textView3"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/output_margin_buffer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zero_money"
        android:id="@+id/baseCostTextView"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/weightEditText"
        android:layout_alignEnd="@+id/weightEditText"
        android:paddingRight="@dimen/output_margin_buffer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/added_cost_label"
        android:id="@+id/textView4"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zero_money"
        android:id="@+id/addedCostTextView"
        android:paddingRight="@dimen/output_margin_buffer"
        android:layout_below="@+id/baseCostTextView"
        android:layout_alignLeft="@+id/baseCostTextView"
        android:layout_alignStart="@+id/baseCostTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_shipping_label"
        android:id="@+id/textView5"
        android:paddingLeft="@dimen/output_margin_buffer"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zero_money"
        android:id="@+id/totalShippingTextView"
        android:paddingRight="@dimen/output_margin_buffer"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/addedCostTextView"
        android:layout_alignStart="@+id/addedCostTextView" />
</RelativeLayout>
